--- a/EoeFragment/bin/AndroidManifest.xml
+++ b/EoeFragment/bin/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
 
+    <uses-permission android:name="android.permission.CALL_PHONE" >
+    </uses-permission>
+
     <application
         android:name="com.eoe.application.application"
         android:allowBackup="true"
