--- a/EoeFragment/bin/AndroidManifest.xml
+++ b/EoeFragment/bin/AndroidManifest.xml
@@ -6,8 +6,10 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" >
     </uses-permission>
 
@@ -28,6 +30,17 @@
         </activity>
         <activity android:name="com.eoe.tampletfragment.addActivity" />
         <activity android:name="com.eoe.tampletfragment.QueryActivity" />
+        <activity android:name="com.eoe.tampletfragment.GetQRcode" />
+        <activity android:name="com.eoe.tampletfragment.addContactsWay" />
+        <activity android:name="com.eoe.tampletfragment.addContactsByQRcode" />
+        <activity android:name="com.eoe.tampletfragment.contactEditActivity" />
+        <activity
+            android:name="com.zxing.activity.CaptureActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
     </application>
 
 </manifest>
